--- a/index.html
+++ b/index.html
@@ -291,16 +291,26 @@
         <h2 class="bestsellers-title"><span class="accent">Top</span> sellers</h2>
         <ul class="bestsellers-list">
           <li class="bestseller-item">
-            <img class="bestseller-img" src="./images/sellers/seller_1.png" alt="" width="368" height="464">
-            <p class="bestseller-desc">CHOCOLATE WITH NUTS</p>
+            <div class="bestsellers-wrapper">
+              <img class="bestseller-img" src="./images/sellers/seller_1.png" alt="" width="368" height="464">
+              <p class="overlay">Chocolate with fruit is an unbeatable combination of two of the tastiest things in the world. This dessert combines delicate and aromatic chocolate with fresh and juicy fruits, creating a true poetry of taste.</p>
+            </div>
+
+            <h3 class="bestseller-desc">CHOCOLATE WITH NUTS</h3>
           </li>
           <li class="bestseller-item">
-            <img class="bestseller-img" src="./images/sellers/seller_2.png" alt="" width="368" height="464">
-            <p class="bestseller-desc">CHOCOLATE WITH FRUITS</p>
+            <div class="bestsellers-wrapper">
+              <img class="bestseller-img" src="./images/sellers/seller_2.png" alt="" width="368" height="464">
+              <p class="overlay">Chocolate with fruit is an unbeatable combination of two of the tastiest things in the world. This dessert combines delicate and aromatic chocolate with fresh and juicy fruits, creating a true poetry of taste.</p>
+            </div>
+            <h3 class="bestseller-desc">CHOCOLATE WITH FRUITS</h3>
           </li>
           <li class="bestseller-item">
-            <img class="bestseller-img" src="./images/sellers/seller_3.png" alt="" width="368" height="464">
-            <p class="bestseller-desc">DARK CHOCOLATE</p>
+            <div class="bestsellers-wrapper">
+              <img class="bestseller-img" src="./images/sellers/seller_3.png" alt="" width="368" height="464">
+              <p class="overlay">Chocolate with fruit is an unbeatable combination of two of the tastiest things in the world. This dessert combines delicate and aromatic chocolate with fresh and juicy fruits, creating a true poetry of taste.</p>
+            </div>
+            <h3 class="bestseller-desc">DARK CHOCOLATE</h3>
           </li>
         </ul>
       </div>
@@ -314,9 +324,10 @@
           <li class="review-item">
             <div class="reviewer">
               <img class="review-img" src="./images/reviews/review_1.png" alt="" width="80" height="80">
-              <h4 class="reviewer-name">Victoria Dobrzhanska</h4>
+              <h3 class="reviewer-name">Victoria Dobrzhanska</h3>
+              <p class="review-desc">I love this chocolate bar. Perfect combination of light crispy wafer, covered in a thin layer chocolate.</p>
             </div>
-            <p class="review-desc">I love this chocolate bar. Perfect combination of light crispy wafer, covered in a thin layer chocolate.</p>
+            
           </li>
           <li class="review-item">
             <div class="reviewer">
