--- a/index.html
+++ b/index.html
@@ -98,9 +98,9 @@
             </li>
           </ul>
           <button class="hero-scroll" type="button">scroll down
-            <span class="circle">
-              <img src="./images/icon/scroll-down.svg" alt="scroll-down" width="22px" height="22px">
-            </span>
+            <svg class="hero-icon">
+              <use href="./images/sprite.svg#scroll-down.svg"></use>
+            </svg>
           </button>
         </div>
       </div>
