--- a/index.html
+++ b/index.html
@@ -98,8 +98,8 @@
             </li>
           </ul>
           <button class="hero-scroll" type="button">scroll down
-            <svg class="hero-icon">
-              <use href="./images/sprite.svg#scroll-down.svg"></use>
+            <svg class="hero-icon" width="38px" height="38px">
+              <use href="./images/sprite.svg#icon-scroll-down"></use>
             </svg>
           </button>
         </div>
@@ -351,7 +351,7 @@
   <!-- Footer section -->
   <footer class="footer">
     <div class="container">
-      <div class="main-part-footer">
+      <div class="footer-top">
         <p class="footer-slogan"> <span class="accent">Chocolate</span> a delicious cure for a bad day</p>
         <div class="social-footer">
           <p class="footer-caption">Social networks</p>
@@ -397,18 +397,41 @@
           </ul>
         </address>
       </div>
-      <ul class="footer-menu">
-        <li class="footer-menu-item">
-          <a class="footer-menu-link" href="#home">Home</a>
-        </li>
-        <li class="footer-menu-item">
-          <a class="footer-menu-link" href="#made">How it’s made?</a>
-        </li>
-        <li class="footer-menu-item">
-          <a class="footer-menu-link" href="#reviews">Chocolate is loved</a>
-        </li>
-      </ul>
+      <div class="footer-bottom">
+        <ul class="footer-menu">
+          <li class="footer-menu-item">
+            <a class="footer-menu-link" href="#home">Home</a>
+          </li>
+          <li class="footer-menu-item">
+            <a class="footer-menu-link" href="#made">How it’s made?</a>
+          </li>
+          <li class="footer-menu-item">
+            <a class="footer-menu-link" href="#reviews">Chocolate is loved</a>
+          </li>
+        </ul>
+      </div>
     </div>
   </footer>
+  <!-- Modal window -->
+  <div class="backdrop is-open">
+    <div class="modal">
+      <button class="modal-btn" type="button" aria-label="Modal close button">
+        <svg class="modal-btn-icon" width="28" height="28">
+          <use href="./images/sprite.svg#icon-x-close"></use>
+        </svg>
+      </button>
+      <p class="modal-caption">
+        LEAVE A REVIEW ABOUT <span class="accent">OUR&nbspCHOCOLATE</span></p>
+      <form class="modal-form" name="modal">
+        <label for="name">
+          <input type="text" name="user_name" minlength="3" id="name"/>
+          <input type="email" name="user_email"/>
+          <button type="submit"></button>
+        </label>
+      </form>
+    </div>
+  </div>
+
+  <script type="module" src="./form.js"></script>
 </body>
 </html>
