--- a/index.html
+++ b/index.html
@@ -344,7 +344,7 @@
             <p class="review-desc"> Chocolate is a family favourite treat. Love the delicious smooth chocolate and the creaminess inside. The wafer is soft but crunchy.</p>
           </li>
         </ul>
-        <button class="review-btn" type="button">Leave  a review</button>
+        <button id="review-btn" class="review-btn" type="button">Leave  a review</button>
       </div>
     </section>
   </main>
@@ -409,25 +409,64 @@
             <a class="footer-menu-link" href="#reviews">Chocolate is loved</a>
           </li>
         </ul>
+
+        <form action="/subscribe" method="post" class="subscription-form">
+          <label for="email" class="form-label-sub"></label>
+          <div class="form-group">
+            <input type="email" id="email" name="email" class="form-input-sub" placeholder="Enter your email" />
+            <button type="submit" class="submit-btn-subscribe">Subscribe</button>
+          </div>
+        </form>
       </div>
     </div>
   </footer>
   <!-- Modal window -->
-  <div class="backdrop is-open">
-    <div class="modal">
-      <button class="modal-btn" type="button" aria-label="Modal close button">
+  <div id="modal" class="">
+    <div class="modal-content">
+      <button id="modal-btn" class="modal-btn" type="button" aria-label="Modal close button">
         <svg class="modal-btn-icon" width="28" height="28">
           <use href="./images/sprite.svg#icon-x-close"></use>
         </svg>
       </button>
       <p class="modal-caption">
         LEAVE A REVIEW ABOUT <span class="accent">OUR&nbspCHOCOLATE</span></p>
-      <form class="modal-form" name="modal">
-        <label for="name">
-          <input type="text" name="user_name" minlength="3" id="name"/>
-          <input type="email" name="user_email"/>
-          <button type="submit"></button>
-        </label>
+      <form class="modal-form form" name="modal" novalidate autocomplete="on">
+        <label class="form-label" for="user_name">Name</label>
+        <div class="form-field">
+          <input class="form-input" type="text" id="user_name" name="user_name" minlength="3" id="name"/>
+          <svg class="form-icon" width="24" height="24">
+            <use href="./images/sprite.svg#icon-user"></use>
+          </svg>
+        </div>  
+
+        <label class="form-label" for="user_email">Email</label>
+        <div class="form-field"> 
+          <input class="form-input" type="email" id="user_email" name="user_email"/>
+          <svg class="form-icon" width="24" height="24">
+            <use href="./images/sprite.svg#icon-message"></use>
+          </svg>
+        </div>  
+
+        <label class="form-label" for="user_phone">Phone number</label> 
+        <div class="form-field"> 
+          <input class="form-input" type="tel" id="user_phone" name="user_phone"/>
+          <svg class="form-icon" width="24" height="24">
+            <use href="./images/sprite.svg#icon-phone"></use>
+          </svg>
+        </div>  
+
+        <label class="form-label" for="user_comment">Comment</label> 
+        <div class="form-field"> 
+          <input class="form-input text" type="text" id="user_comment" name="user_comment" placeholder="Enter text" />
+        </div>  
+
+        <div class="accept">
+          <input class="accept-box" type="checkbox"/>
+          <p class="acception">I accept the terms and conditions of the <span class="accent-modal">Privacy Policy</span></p>
+        </div>
+
+        <button class="submit-btn" type="submit">Send form</button>
+        
       </form>
     </div>
   </div>
